// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatReasoning > renders with chevron leading correctly 1`] = `
"<div data-state="closed" data-slot="root" class=""><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class=""><span data-slot="leading" class=""><!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="chevronIcon" class=""></svg></span><span data-slot="label" class="">Thought</span>
    <!--v-if-->
  </button>
  <div data-slot="content" class="" id="akar-collapsible-content-v-0" hidden="" data-state="closed" style="--akar-collapsible-content-height: 0px; --akar-collapsible-content-width: 0px;">
    <div data-slot="body" class="">The user is asking about Vue components...</div>
  </div>
</div>"
`;

exports[`ChatReasoning > renders with chevronIcon correctly 1`] = `
"<div data-state="closed" data-slot="root" class=""><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="">
    <!--v-if--><span data-slot="label" class="">Thought</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg>
  </button>
  <div data-slot="content" class="" id="akar-collapsible-content-v-0" hidden="" data-state="closed" style="--akar-collapsible-content-height: 0px; --akar-collapsible-content-width: 0px;">
    <div data-slot="body" class="">The user is asking about Vue components...</div>
  </div>
</div>"
`;

exports[`ChatReasoning > renders with class correctly 1`] = `
"<div data-state="closed" data-slot="root" class="my-5"><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="">
    <!--v-if--><span data-slot="label" class="">Thought</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg>
  </button>
  <div data-slot="content" class="" id="akar-collapsible-content-v-0" hidden="" data-state="closed" style="--akar-collapsible-content-height: 0px; --akar-collapsible-content-width: 0px;">
    <div data-slot="body" class="">The user is asking about Vue components...</div>
  </div>
</div>"
`;

exports[`ChatReasoning > renders with default slot correctly 1`] = `
"<div data-state="closed" data-slot="root" class=""><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="">
    <!--v-if--><span data-slot="label" class="">Thought</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg>
  </button>
  <div data-slot="content" class="" id="akar-collapsible-content-v-0" hidden="" data-state="closed" style="--akar-collapsible-content-height: 0px; --akar-collapsible-content-width: 0px;">
    <div data-slot="body" class="">Custom reasoning content</div>
  </div>
</div>"
`;

exports[`ChatReasoning > renders with defaultOpen correctly 1`] = `
"<div data-state="open" data-slot="root" class=""><button type="button" aria-controls="" aria-expanded="true" data-state="open" data-slot="trigger" class="">
    <!--v-if--><span data-slot="label" class="">Thought</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg>
  </button>
  <div data-slot="content" class="" id="akar-collapsible-content-v-0" style="--akar-collapsible-content-height: 0px; --akar-collapsible-content-width: 0px; transition-duration: 0s; animation-name: none;">
    <div data-slot="body" class="">The user is asking about Vue components...</div>
  </div>
</div>"
`;

exports[`ChatReasoning > renders with duration correctly 1`] = `
"<div data-state="closed" data-slot="root" class=""><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="">
    <!--v-if--><span data-slot="label" class="">Thought for 5 seconds</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg>
  </button>
  <div data-slot="content" class="" id="akar-collapsible-content-v-0" hidden="" data-state="closed" style="--akar-collapsible-content-height: 0px; --akar-collapsible-content-width: 0px;">
    <div data-slot="body" class="">The user is asking about Vue components...</div>
  </div>
</div>"
`;

exports[`ChatReasoning > renders with icon correctly 1`] = `
"<div data-state="closed" data-slot="root" class=""><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class=""><span data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><!--v-if--></span><span data-slot="label" class="">Thought</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg></button>
  <div data-slot="content" class="" id="akar-collapsible-content-v-0" hidden="" data-state="closed" style="--akar-collapsible-content-height: 0px; --akar-collapsible-content-width: 0px;">
    <div data-slot="body" class="">The user is asking about Vue components...</div>
  </div>
</div>"
`;

exports[`ChatReasoning > renders with streaming correctly 1`] = `
"<div data-state="open" data-slot="root" class=""><button type="button" aria-controls="" aria-expanded="true" data-state="open" data-slot="trigger" class="">
    <!--v-if--><span style="--spread: 18px; --duration: 2s;" data-slot="label" class="">Thinking…</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg>
  </button>
  <div data-slot="content" class="" id="akar-collapsible-content-v-0" style="--akar-collapsible-content-height: 0px; --akar-collapsible-content-width: 0px; transition-duration: 0s; animation-name: none;">
    <div data-slot="body" class=""></div>
  </div>
</div>"
`;

exports[`ChatReasoning > renders with text correctly 1`] = `
"<div data-state="closed" data-slot="root" class=""><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="">
    <!--v-if--><span data-slot="label" class="">Thought</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg>
  </button>
  <div data-slot="content" class="" id="akar-collapsible-content-v-0" hidden="" data-state="closed" style="--akar-collapsible-content-height: 0px; --akar-collapsible-content-width: 0px;">
    <div data-slot="body" class="">The user is asking about Vue components...</div>
  </div>
</div>"
`;

exports[`ChatReasoning > renders with ui correctly 1`] = `
"<div data-state="closed" data-slot="root" class=""><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="">
    <!--v-if--><span data-slot="label" class="">Thought</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg>
  </button>
  <div data-slot="content" class="" id="akar-collapsible-content-v-0" hidden="" data-state="closed" style="--akar-collapsible-content-height: 0px; --akar-collapsible-content-width: 0px;">
    <div data-slot="body" class="text-muted">The user is asking about Vue components...</div>
  </div>
</div>"
`;
